[package]
name = "fb-proxy"
description            = "Yazi event proxy"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-config = { path = "../config", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-parser = { path = "../parser", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-widgets = { path = "../widgets", version = "26.2.2" }

# External dependencies
tokio = { workspace = true }

