[package]
name = "fb-sftp"
description            = "Yazi SFTP client"
authors                = [ "AspectUnk", "sxyazi <sxyazi@gmail.com>" ]
version = "26.2.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
bitflags    = { workspace = true }
parking_lot = { workspace = true }
russh       = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
typed-path  = { workspace = true }

