[package]
name = "fb-shim"
description            = "Yazi crate shims"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-macro = { path = "../macro", version = "26.2.2" }

# External dependencies
crossterm = { workspace = true }
ratatui   = { workspace = true, features = ["unstable-rendered-line-info"] }
twox-hash = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

